# final-project

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt  requirements.in  transcript.txt
scripts/: test_channel.py
src/backend/scrapers/: cookbook_toc_scraper.py  youtube_recipe_pipeline.py
src/backend/scrapers/DNU/: chef_agent.py  transcribe_videos.py  transcribe_videosx.py  transcript.txt  video_scraper.py
src/backend/scrapers/data/jamieoliver_links/: links.jsonl
src/backend/scrapers/data/open_wikibooks_toc/: Cookbook_Annatto.json  Cookbook_Baking.json  Cookbook_Blanching.json  Cookbook_Boiling.json  Cookbook_Braising.json  Cookbook_Broiling.json  Cookbook_Canning.json  Cookbook_Condiments.json  Cookbook_Cookware.json  Cookbook_Dairy.json  Cookbook_Deep_Fat_Frying.json  Cookbook_Eating_for_Health.json  Cookbook_Equipment.json  Cookbook_Fermentation.json  Cookbook_Fresh_Mozzarella_Bruschetta.json  Cookbook_Fruit.json  Cookbook_Gluten-Free.json  Cookbook_Halal.json  Cookbook_High_Protein_Diet.json  Cookbook_Kosher.json  Cookbook_Leavening_Agent.json  Cookbook_Low-Carb.json  Cookbook_Low-GI_Diet.json  Cookbook_Seafood.json  Cookbook_Special_Diets.json  Cookbook_Sweeteners.json  Cookbook_Units_of_measurement.json  Cookbook_Vegetable.json  Cookbook_Vegetarian_cuisine.json  recipes.csv  recipes.jsonl  span_class_mw-page-title-namespace_Cookbook_span_span_class_mw-page-title-separator_span_span_class_mw-page-title-main_A.json  (+12 more)
tests/: kusina-bot.py
tests/data/recipes/audio/: _qgMTurPOWE.mp4.part-Frag576  _qgMTurPOWE.mp4.ytdl
(+6 files in other folders)
