[project]
name = "kusina-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Happy",email = "happy.e.manaloto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "streamlit (>=1.47.1,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "openai (>=1.99.0,<2.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
