[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Happy <happy.e.manaloto@gmail.com>"]
packages = [
  { include = "backend", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
streamlit = ">=1.47.1,<2.0.0"
langchain = ">=0.3.27,<0.4.0"
openai = ">=1.99.0,<2.0.0"
sqlalchemy = ">=2.0.42,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
youtube-transcript-api = "^1.2.2"
pytube = "^15.0.0"
recipe-scrapers = "^15.8.0"
beautifulsoup4 = "^4.13.4"
bs4 = "^0.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
